--- a/styleadmin.css
+++ b/styleadmin.css
@@ -710,3 +710,462 @@ form .button-student input:hover{
         width: 0;
     }
 }
+
+
+
+
+/*===========================================Faculty================================================================*/
+
+/*FACULTY INFORMATION ADMIN WITH FILTER*/
+
+.facultyContainer{
+    padding: 20px;
+    box-shadow: 1px 1px 10px var(--black1);
+    border-radius: 10px;
+    margin: 10px;
+    margin-top: 20px;
+}
+.facultyContainer header .filterFaculty{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.filterFaculty .faculty{
+    color: var(--green);
+}
+.filterFaculty .faculty select, .filterFaculty .filter input{
+    padding: 5px 10px;
+    border: 1px solid var(--black1);
+    color: var(--green);
+    background: var(--white);
+    border-radius: 5px;
+    outline: none;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.filterFaculty .faculty select{
+    padding: 5px 10px;
+}
+
+.filterFaculty .faculty select:hover{
+    color: white;
+    background-color: #0e610e;
+}
+.filterFaculty .filter{
+    display: flex;
+    align-items: center;
+}
+.filter label{
+    color: var(--green);
+    margin-left: 5px;
+}
+.filter input:focus{
+    border-color: var(--black1);
+}
+.facultyContainer header .addFacultyBtn{
+    margin-bottom: 15px;
+}
+header .addFacultyBtn button{
+    padding: 9px 14px;
+    color: var(--black1);
+    background: transparent;
+    font-size: 16px;
+    cursor: pointer;
+    pointer-events: auto;
+    outline: none;
+    border: 1px solid var(--black1);
+    background: var(--white);
+    border-radius: 5px;
+}
+header .addFacultyBtn button:hover{
+    color: white;
+    background-color: var(--green);
+}
+
+.facultyContainer table{
+    border-collapse: collapse;
+    text-align: left;
+}
+table .heading{
+    background: var(--black1);
+    background: transparent;
+    color: var(--black1);
+}
+table .heading th:hover{
+    background: var(--grey);
+    transition: 0.3s;
+}
+table tr th, table tr td{
+    padding: 4px 10px;
+    color: var(--black1);
+}
+table tr th{
+    padding: 12px 20px;
+}
+
+table tr td:nth-child(1), 
+table tr td:nth-child(2),
+table tr td:nth-child(3),
+table tr td:nth-child(4),
+table tr td:nth-child(5),
+table tr td:nth-child(6),
+table tr td:nth-child(7),
+table tr td:nth-child(8){
+    text-align: center;
+}
+table tr:hover{
+    cursor: pointer;
+    background: var(--white);
+}
+table tr td{
+    border-bottom: 1px solid var(--black1);
+}
+table tbody tr:first-child td{
+    border-top: 1px solid var(--black1);
+}
+table tbody tr:nth-child(odd){
+    background: var(--white);
+}
+table tbody tr:nth-child(odd) > td:nth-child(3){
+    background: var(--white);
+}
+table td button{
+    margin: 0 3px;
+    padding: 5px;
+    width: 35px;
+    background: var(--white);
+    color: black;
+    background: transparent;
+    font-size: 16px;
+    cursor: pointer;
+    pointer-events: auto;
+    outline: none;
+    border: 1px solid var(--black1);
+}
+table td button:hover{
+    background-color: var(--green);
+    color: var(--white);
+}
+
+.facultyContainer footer{
+    margin-top: 25px;
+    font-size: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.facultyContainer footer span{
+    color: black;
+}
+footer .pagination{
+    display: flex;
+}
+footer .pagination button{
+    width: 40px;
+    padding: 5px 0;
+    color: black;
+    background: transparent;
+    font-size: 16px;
+    cursor: pointer;
+    pointer-events: auto;
+    outline: none;
+    border-left: none;
+    border: 1px solid black;
+    margin: 0;
+}
+.pagination button:first-child{
+    width: 85px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-left: 1px solid black;
+}
+.pagination button:last-child{
+    width: 85px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.pagination button.active, .pagination button:hover{
+    background: var(--green);
+    color: white;
+}
+.pagination button.act:first-child{
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.pagination button.act:last-child{
+    opacity: 1;
+    pointer-events: auto;
+}
+table tr .empty{
+    padding: 6px;
+    background: var(--grey);
+}
+.facultyContainer tr th{
+    padding: 12px 30px;
+}
+
+.addFacultyBtn button a {
+    text-decoration: none;
+    color: var(--dark8);
+}
+
+
+/*===================================MODAL FACULTY===========================================*/
+.modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: none;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 500px;
+    max-width: 80%;
+}
+
+.modal.active {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-header .title {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.modal-header .close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
+.modal-body {
+    padding: 30px;
+    max-height: 500px;
+}
+
+.searchAssign{
+    position: relative;
+    width: 400px;
+    margin: 0 10px;
+    padding-bottom: 20px;
+}
+.searchAssign label{
+    position: relative;
+    width: 100%;
+}
+.searchAssign label input{
+    width: 100%;
+    height: 40px;
+    border-radius: 40px;
+    padding: 5px 20px;
+    padding-left: 35px;
+    outline: none;
+    border: 1px solid var(--black2);
+    
+}
+.searchAssign label ion-icon{
+    position: absolute;
+    top: 0;
+    left: 10px;
+    font-size: 1.2em;
+}
+
+
+.searchAssign .assign-header .content-courseSection {
+    position: fixed;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+/*---------------------MODAL POSITION---------------------*/
+.modal-body {
+    padding: 30px;
+    max-height: 500px;
+    overflow: auto;
+}
+
+.modal-body table{
+    border-bottom: #222;
+    padding-bottom: 30px;
+    max-height: 300px;
+    overflow-y: scroll;
+}
+
+.title-SectionEval {
+    font-size: 20px;
+    color: #0e610e;
+    padding-top: 20px;
+}
+
+
+    
+
+
+
+#overlay {
+    position: fixed;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: 200ms ease-in-out;
+    background-color: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+}
+
+#overlay.active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+
+/*===================================NEW FACULTY===========================================*/
+.body{
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background: white;
+}
+.newFaculty{
+    max-width: 700px;
+    width: 100%;
+    background: white;
+    padding: 25px 30px;
+    border-radius: 5px;
+    
+}
+.newFaculty .title{
+    font-size: 25px;
+    font-weight: 500;
+    position: relative;
+}
+.newFaculty .title::before{
+    content: '';
+    position: absolute;
+    height: 3px;
+    width: 30px;
+    background: green;
+    left: 0;
+    bottom: 0;
+}
+.newFaculty form .facultyDetails{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 15px 0 5px 0;
+}
+form .facultyDetails .inputBox{
+    margin-bottom: 15px;
+    width: calc(100% / 2 - 20px);
+}
+.facultyDetails .inputBox .namedetails{
+    display: block;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+.facultyDetails .inputBox input{
+    height: 30px;
+    width: 100%;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    padding-left: 15px;
+    font-size: 16px;
+    border-bottom-width: 2px;
+    transition: all 0.2s ease;
+}
+.facultyDetails .inputBox input:focus,
+.facultyDetails .inputBox input:valid{
+    border-color: green;
+}
+form .sexDetails .sexTitle{
+    font-size: 18px;
+    font-weight: 500;
+}
+form .sexDetails .category{
+    display: flex;
+    width: 80%;
+    margin: 14px 0;
+    justify-content: space-between;
+}
+.sexDetails .category label{
+    display: flex;
+    align-items: center;
+    margin: 18px;
+}
+.sexDetails .category .dot{
+    height: 18px;
+    width: 18px;
+    background: #d9d9d9;
+    border-radius: 50%;
+    margin-right: 10px;
+    border: 5px solid transparent;
+    transition: all 0.3s ease;
+}
+#dot-1:checked ~ .category label .one,
+#dot-2:checked ~ .category label .two{
+    border-color: #d9d9d9;
+    background: green ;
+}
+form input[type="radio"]{
+    display: none;
+}
+form .button-faculty{
+    height: 45px;
+    margin: 45px 0;
+}
+form .button-faculty input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    font-weight: 500;
+    background: green;
+    cursor: pointer;
+}
+form .button-faculty input:hover{
+    background: white;
+    border: 1px solid green;
+    color: green;
+}
+.back button{
+    height: 30px;
+    margin: 10px;
+    background: white;
+    border: 1px solid;
+    padding: 5px;
+    color: green;
+}
+.back button i{
+    margin: 0 5px;
+}
+.back button:hover{
+    background: green;
+    color: white;
+}
+.required{
+    color: red;
+}
